test/regress/cov3-annotate-dup-price.test
; Test error for duplicate price annotation
; Covers annotate.cc lines 110-111 (duplicate price check)

2024/01/01 Test
    Assets:Brokerage    10 AAPL {$150} {$160}
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Assets:Brokerage    10 AAPL {$150} {$160}
                      ^^^^^^^^^^^^^^^^^^^^^
Error: Commodity specifies more than one price
end test
